ratnesh | Single-SPA | react integration.

--- a/navbar/src/app/primary-nav/primary-nav.component.html
+++ b/navbar/src/app/primary-nav/primary-nav.component.html
@@ -29,7 +29,9 @@
     <li>
       <a routerLink="/app2" routerLinkActive="active">App 2</a>
     </li>
-    <!-- Add more navigation links here -->
+    <li>
+      <a routerLink="/endsystems" routerLinkActive="active">endsystems</a>
+    </li>
   </ul>
   <!-- <navbar-home></navbar-home> -->
 </nav>
